--- a/src/styles/tabs.css
+++ b/src/styles/tabs.css
@@ -35,7 +35,7 @@
     min-height: 100vh;
 }
 .tabs .add{
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     right: 10px;
     z-index: 10px;
